<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="12dp"
    tools:context="com.example.android.inventoryapp.InventoryActivity">

    <LinearLayout
        android:id="@+id/product_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_name_header"
            android:layout_width="@dimen/product_name_header_width"
            android:layout_height="wrap_content"
            android:text="@string/product_name_header"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/product_quantitiy_header"
            android:layout_width="@dimen/product_quantity_header_width"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/quantity_header_margin_right"
            android:text="@string/product_quantity_header"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edit_product_price_header"
            android:layout_width="@dimen/product_price_header_width"
            android:layout_height="wrap_content"
            android:text="@string/product_price_header"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/inventory_activity_empty_view" />

    <ListView
        android:id="@+id/product_listview"
        style="@style/ProductListView"></ListView>

    <Button
        android:id="@+id/add_new_product_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/inventory_add_new_product_button_height"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/inventory_add_new_product_button_margin_top"
        android:text="@string/add_new_product" />


</RelativeLayout>
