<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    xm

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/app_padding_left"
        android:paddingRight="@dimen/app_padding_right"
        android:paddingTop="@dimen/app_padding_top">

        <LinearLayout
            android:id="@+id/detailed_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detailed_product_name_header"
                style="@style/ProductDetailHeader"
                android:text="@string/product_name_header" />

            <TextView
                android:id="@+id/detailed_product_name_text"
                style="@style/ProductDetailText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailed_product_current_inventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detailed_product_current_inventory_header"
                style="@style/ProductDetailHeader"
                android:text="@string/product_inventory_header" />

            <TextView
                android:id="@+id/detailed_product_current_inventory_text"
                android:layout_width="@dimen/product_text_width"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailed_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detailed_product_price_header"
                style="@style/ProductDetailHeader"
                android:text="@string/product_price_header" />

            <TextView
                android:id="@+id/detailed_product_price_text"
                android:layout_width="@dimen/product_text_width"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailed_product_supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detailed_product_supplier_header"
                style="@style/ProductDetailHeader"
                android:text="@string/product_supplier_name_header" />

            <TextView
                android:id="@+id/detailed_product_supplier_name_text"
                android:layout_width="@dimen/product_text_width"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailed_product_supplier_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detailed_product_supplier_email_header"
                style="@style/ProductDetailHeader"
                android:text="@string/product_supplier_email_header" />

            <TextView
                android:id="@+id/detailed_product_supplier_email_text"
                android:layout_width="@dimen/product_text_width"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginTop="@dimen/margin_top"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/product_detail_image"
                style="@style/ProductDetailImage" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/increase_quantity_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/increase_item_quantity" />

            <Button
                android:id="@+id/decrease_quantity_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/decrease_item_quantity" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/delete_product_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_product_from_database" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/order_product_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_product_from_supplier" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>